AS results add "worst side" filter (#246)
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier.pro@gmail.com>